@@ -158,7 +158,20 @@ void NS_DestroyPluginInstance(CPlugin * aPlugin)
     if (aPlugin)
         delete(CPlugin *) aPlugin;
 }
+
+
 */
+void postDOMEvent(NPP mInstance, const gchar *id, const gchar *event) {
+    gchar *jscript;
+
+    jscript = g_strdup_printf("javascript:obj=document.getElementById('%s');"
+                                "e=document.createEvent('Events');"
+                                "e.initEvent('%s',true,true);"
+                                "obj.dispatchEvent(e);",id,event);
+    NPN_GetURL(mInstance, jscript, NULL);
+    g_free(jscript);
+}
+
 ////////////////////////////////////////
 //
 // CPlugin class implementation
@@ -186,10 +199,12 @@ autostart(1),
 lastupdate(0),
 show_controls(1),
 name(NULL),
+id(NULL),
 console(NULL),
 controls(NULL),
 disable_context_menu(FALSE),
 disable_fullscreen(FALSE),
+post_dom_events(FALSE),
 event_mediacomplete(NULL),
 event_destroy(NULL),
 event_mousedown(NULL),
@@ -199,6 +214,7 @@ tv_driver(NULL), tv_device(NULL), tv_input(NULL), tv_width(0), tv_height(0)
 {
     GRand *rand;
     GmPrefStore *store;
+    gchar *jscript;
 
     NPN_GetValue(mInstance, NPNVWindowNPObject, &sWindowObj);
 
@@ -289,6 +305,7 @@ tv_driver(NULL), tv_device(NULL), tv_input(NULL), tv_width(0), tv_height(0)
     if (connection == NULL) {
         connection = dbus_hookup(this);
     }
+    
     mInitialized = TRUE;
 }
 
@@ -434,6 +451,10 @@ NPError CPlugin::SetWindow(NPWindow * aWindow)
             g_error_free(error);
             error = NULL;
         }
+
+        if (post_dom_events && id != NULL) {
+            postDOMEvent(mInstance, id, "qt_begin");
+        }
     }
 
     if (playlist != NULL) {
@@ -523,6 +544,9 @@ NPError CPlugin::DestroyStream(NPStream * stream, NPError reason)
             text = g_strdup_printf(_("Cache fill: %2.2f%%"), 100.0);
             send_signal_with_string(this, item, "SetProgressText", text);
             g_free(text);
+            if (post_dom_events && this->id != NULL) {
+                postDOMEvent(mInstance, this->id, "qt_progress");
+            }
         }
 
         if (!item->opened && item->play) {
@@ -535,6 +559,9 @@ NPError CPlugin::DestroyStream(NPStream * stream, NPError reason)
             playlist = list_parse_qml(playlist, item);
             if (item->play) {
                 open_location(this, item, TRUE);
+                if (post_dom_events && this->id != NULL) {
+                    postDOMEvent(mInstance, this->id, "qt_play");
+                }
             } else {
                 item = list_find_next_playable(playlist);
                 if (!item->streaming) {
@@ -547,6 +574,9 @@ NPError CPlugin::DestroyStream(NPStream * stream, NPError reason)
                         NPN_GetURLNotify(mInstance, item->src, NULL, item);
                 } else {
                     open_location(this, item, FALSE);
+                    if (post_dom_events && this->id != NULL) {
+                        postDOMEvent(mInstance, this->id, "qt_play");
+                    }
                 }
             }
             g_free(path);
@@ -558,6 +588,10 @@ NPError CPlugin::DestroyStream(NPStream * stream, NPError reason)
         printf("Exiting destroy stream reason = %i for %s\n", reason, stream->url);
         if (item == NULL) {
             return NPERR_NO_ERROR;
+        } else {
+            if (post_dom_events && this->id != NULL) {
+                postDOMEvent(mInstance, this->id, "qt_load");
+            }
         }
 
         if (item->localfp) {
@@ -715,6 +749,9 @@ int32 CPlugin::Write(NPStream * stream, int32 offset, int32 len, void *buffer)
     if (strstr((char *) buffer, "Content-length:") != NULL || item->streaming == TRUE) {
         item->streaming = TRUE;
         open_location(this, item, FALSE);
+        if (post_dom_events && this->id != NULL) {
+            postDOMEvent(mInstance, this->id, "qt_play");
+        }
         item->requested = TRUE;
         if (item->localfp) {
             fclose(item->localfp);
@@ -726,6 +763,9 @@ int32 CPlugin::Write(NPStream * stream, int32 offset, int32 len, void *buffer)
     if (strstr((char *) buffer, "<HTML>") != NULL || item->streaming == TRUE) {
         item->streaming = TRUE;
         open_location(this, item, FALSE);
+        if (post_dom_events && this->id != NULL) {
+            postDOMEvent(mInstance, this->id, "qt_play");
+        }
         item->requested = TRUE;
         if (item->localfp) {
             fclose(item->localfp);
@@ -769,6 +809,9 @@ int32 CPlugin::Write(NPStream * stream, int32 offset, int32 len, void *buffer)
                 send_signal_with_string(this, item, "SetProgressText", text);
                 if (!item->opened)
                     send_signal_with_string(this, item, "SetURL", item->src);
+                if (post_dom_events && this->id != NULL) {
+                    postDOMEvent(mInstance, this->id, "qt_progress");
+                }
 
                 time(&lastupdate);
                 item->lastsize = item->localsize;
@@ -788,6 +831,9 @@ int32 CPlugin::Write(NPStream * stream, int32 offset, int32 len, void *buffer)
                 if (item->bitrate > 0) {
                     if (item->localsize / item->bitrate >= 10) {
                         ok_to_play = TRUE;
+                        if (post_dom_events && this->id != NULL) {
+                            postDOMEvent(mInstance, this->id, "qt_canplay");
+                        }
                     }
                 }
             }
@@ -804,6 +850,10 @@ int32 CPlugin::Write(NPStream * stream, int32 offset, int32 len, void *buffer)
             playlist = list_parse_qml(playlist, item);
             if (item->play) {
                 open_location(this, item, TRUE);
+                if (post_dom_events && this->id != NULL) {
+                    postDOMEvent(mInstance, this->id, "qt_canplay");
+                    postDOMEvent(mInstance, this->id, "qt_play");
+                }
             } else {
                 item = list_find_next_playable(playlist);
                 if (item != NULL) {
@@ -827,11 +877,17 @@ int32 CPlugin::Write(NPStream * stream, int32 offset, int32 len, void *buffer)
 void CPlugin::Play()
 {
     send_signal(this, this->lastopened, "Play");
+    if (post_dom_events && this->id != NULL) {
+        postDOMEvent(mInstance, this->id, "qt_play");
+    }
 }
 
 void CPlugin::Pause()
 {
     send_signal(this, this->lastopened, "Pause");
+    if (post_dom_events && this->id != NULL) {
+        postDOMEvent(mInstance, this->id, "qt_pause");
+    }
 }
 
 void CPlugin::Stop()
@@ -867,6 +923,9 @@ void CPlugin::SetFullScreen(PRBool value)
 void CPlugin::SetVolume(double value)
 {
     send_signal_with_double(this, this->lastopened, "Volume", value);
+    if (post_dom_events && this->id != NULL) {
+        postDOMEvent(mInstance, this->id, "qt_volumechange");
+    }
 }
 
 void CPlugin::GetVolume(double *_retval)
